# hubo_manipulation

src/my_moveit_pkg/: package.xml  setup.py
src/my_moveit_pkg/config/: ur5_arm_test_goal_config.yaml
src/my_moveit_pkg/launch/: test.py  ur5_arm_test.launch.py
src/my_moveit_pkg/my_moveit_pkg/: new_arm_test.py  test.py  ur5_arm_test.py  ur5_arm_test_2.py
